# RISC-V_Pipelined_Processor

./: CMakeLists.txt  README.md
tests/: simple_add.dump  simple_add.out  simple_add.s
verilog_src/: core_32i.cpp  core_64.cpp  elfio.hpp
verilog_src/ADDITIONAL/: Adder.sv  Buffer.sv  FlopReset.sv  FlopResetClear.sv  FlopResetEn.sv  FlopResetEnClear.sv  Multiplexer2.sv  Multiplexer3.sv  Multiplexer4.sv
verilog_src/CPU/: Pipeline_CPU.sv  Pipeline_CPU_old.sv  alu.sv  alu_decoder.sv  controller.sv  datapath.sv  dmem.sv  extend.sv  hazard.sv  imem.sv  main_decoder.sv  main_pipeline.sv  reg_file.sv
